<resources>
    <string name="app_name">MyFirstProject</string>
    <string name="action_menu">Menu</string>
    <string name="action_user">User</string>
    <string name="action_search">Search</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confPassword">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="login">Login</string>
    <string name="profile">PROFILE</string>
    <string name="age">Age</string>
    <string name="deliveryRating">Delivery Rating</string>
    <string name="consumerRating">Consumer Rating</string>
    <string name="makeOrder">Make an order</string>
    <string name="receiveOrder">Receive Order</string>
    <string name="orders">ORDERS</string>
    <string name="address">Address</string>
    <string name="acceptOrder">Accept Order</string>
    <string name="newOrder">Add new order</string>
    <string name="title">Title</string>
    <string name="user">User</string>
    <string name="productDescr">Product Description</string>
    <string name="putInformation">You have forgotten something</string>
    <string name="edit">EDIT</string>
    <string name="save">Save</string>
    <string name="plans">PLANS</string>
    <string name="myOrders">My Orders</string>
    <string name="deliverySub">Delivery Subscription</string>
    <string name="buy">Buy</string>
    <string name="consumerSub">Consumer Subscription</string>
    <string name="noAdsSub">No Ads Subscription</string>
    <string name="deliveryDescr">- No ads\n- Deliver more than 3 orders per day\n\n20$/year</string>
    <string name="consumerDescr">- No ads\n- Make more than 3 orders per day\n- More importance for your orders\n\n20$/year</string>
    <string name="noAdsDescription">- No ads\n\n5$/year</string>
    <string name="logInFirst">You have to authenticate first</string>
    <string name="acceptedOrders">To deliver</string>
    <string name="slogan">make an order or send it yourself</string>
    <string name="registerLogIn">REGISTER / LOG IN</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="score">Score</string>
</resources>
